Several changes applied: Profiles section bugs fixed, reestructured contextual menus for all the application sections, reapired masonry for auto-adjusting blocks on bikes section

--- a/app/assets/stylesheets/neighbourhoods.css.scss
+++ b/app/assets/stylesheets/neighbourhoods.css.scss
@@ -51,7 +51,7 @@
 	}
 }
 
-.trips {
+.neighbourhoods {
 	.box:hover {
 		border: 1px solid #FF6C01 !important;
 		-moz-box-shadow: 0 0 8px #FF6C01;
@@ -78,7 +78,7 @@
 	}
 }
 
-.trips, .rides {
+.neighbourhoods, .rides {
 	.content {
 		
 		.core {
