--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -186,154 +186,8 @@ a.back {
 	margin: 5px;
 }
 
-.blue:hover{
-	background: -moz-linear-gradient(
-		top,
-		#1D91E0 0%,
-		#1E5991);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#1D91E0),
-		to(#1E5991));
-}
-
-.blue {
-	background: -moz-linear-gradient(
-		top,
-		#71B1E0 0%,
-		#547CA3);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#71B1E0),
-		to(#547CA3));
-	border: 1px solid white;
-}
-
-.orange:hover {
-	background: -moz-linear-gradient(
-		top,
-		#E08334 0%,
-		#E0601C);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#E08334),
-		to(#E0601C));
-}
-
-.orange {
-	background: -moz-linear-gradient(
-		top,
-		#E0995C 0%,
-		#E08631);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#E0995C),
-		to(#E08631));
-	border: 1px solid white;
-}
-
-.green-button {
-	border: 1px solid white;
-	background: -moz-linear-gradient(
-		top,
-		#227A2D 0%,
-		#55A55B);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#227A2D),
-		to(#55A55B));
-}
-
-.green-button:hover {
-	background: -moz-linear-gradient(
-		top,
-		#289435 0%,
-		#55A55B);
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#289435),
-		to(#55A55B));
-}
-
-.red-button:hover {
-	background: -moz-linear-gradient(
-		top,
-		#BD514A 0%,
-		#BD433E) !important;
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#BD514A),
-		to(#BD433E)) !important;
-}
-
-.red-button {
-	background: -moz-linear-gradient(
-		top,
-		#BD8280 0%,
-		#BD7979) !important;
-	background: -webkit-gradient(
-		linear, left top, left bottom, 
-		from(#BD8280),
-		to(#BD7979)) !important;
-	border: 1px solid white !important;
-}
-
-.button {
-		font-size: 13px;
-		color: #ffffff !important;
-		padding: 6px 12px;
-		border-radius: 5px;
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-		text-shadow:
-			0px 1px 0px #2B2B2B,
-			0px 1px 0px #2B2B2B;
-		-moz-box-shadow:
-			0px 1px 2px rgba(000,000,000,0.5);
-		-webkit-box-shadow:
-			0px 1px 2px rgba(000,000,000,0.5);
-		border: 1px solid #FFFDEF;
-}
-
 .spacer {
 	height: 8px;
-}
-
-.poll-results .question .answers .value {
-	padding: 5px 10px;
-	background-color: #DEDEDE;
-	opacity: 0.5;
-	text-align: center;
-	font-size: 12px;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-}
-
-.polls, .poll-results {
-	padding: 10px;
-	font-size: 13px;
-}
-
-.poll-results .question {
-	margin-bottom: 10px;
-}
-
-.question label {
-	width: 140px;
-	font-weight: bold;
-}
-
-.question .answers .value {
-	margin-right: 10px;
-	width: 60px;
-}
-
-.question .answers,
-.question .answers .value,
-.question label,
-.invite p {
-	display: inline-block;
 }
 
 #container {
@@ -447,3 +301,131 @@ p.empty {
 	border: 0.2px solid #8EC4FF;	
 }
 
+.subsection {
+	background-color: white;
+	padding: 10px;
+	color: #FF4B02;
+	font-weight: 200;
+	border: 1px solid #FFC088;
+	* {
+		display: inline-block;
+	}
+}
+
+
+$accidents: #CE2B28;
+$thefts: #3652AE;
+$assaults: #63A62C;
+$breakdowns: #F18706;
+
+.listing-view {
+	margin-top: 20px;
+
+	.with-focus {
+		border: 2px solid #0F527C !important;
+		.signal {
+			opacity: 1 !important;
+		} 
+	}
+
+	.empty {
+		text-align: center;
+	}
+
+	.with-focus {
+		.extras {
+			display: block !important;
+		}
+	}
+
+	.incident {
+		border: 2px solid #CEDEFF;
+		background-color: #FCFAFF;
+		padding: 10px;
+		padding-bottom: 5px;
+		margin: 10px;
+
+		.extras {
+			display: none;
+		}
+
+		.title {
+			font-size: 14px;
+		}
+
+		.signal:hover {
+			opacity: 1;
+		}
+
+		.signal {
+			width: 100%;
+			height: 20px !important;
+			opacity: 0.5;
+			cursor: pointer;
+		}
+
+		.contextual-info, .contextual-actions {
+			li {
+				margin-right: 15px;
+			}
+		}
+
+		.contextual-actions {
+			margin-left: 20px;
+			font-size: 13px;
+
+			.remarked a {
+				color: #FF4F00;
+			}
+		}	
+
+		.contextual-info {
+			li {
+				margin-right: 15px;
+			}
+
+			.time {
+				text-transform: uppercase;
+				font-size: 10px;
+			}
+
+			.reporter {
+				font-size: 11px;
+				color: #3D5FA6;
+			}
+
+			.comments {
+				font-size: 13px;
+				text-decoration: none;
+			}
+		}
+		.description {
+			font-size: 13px;
+			color: #999;
+		}
+	}
+
+	.accident {
+		.signal {
+			background-color: $accidents;
+		}
+	}
+
+	.breakdown {
+		.signal {
+			background-color: $breakdowns;
+		}
+	}
+
+	.assault {
+		.signal {
+			background-color: $assaults;
+		}
+	}
+
+	.theft {
+		.signal {
+			background-color: $thefts;
+		}
+	}
+}
