--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title><%= t('app.name') %></title>
 	  
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<%= stylesheet_link_tag    "profiles" %>
   <%= javascript_include_tag "profiles" %>
   <%= csrf_meta_tags %>
@@ -13,18 +14,18 @@
 <div class="background-logo"></div>
 <%= render 'layouts/shared/navbar' %>
 
-<div class="row-fluid top-spaced-70 profile">
+<div id="top-container" class="row-fluid top-spaced-70 profile">
 	<div class="span1"></div>
 	<div class="span2">
 		<div class="avatar-img centered centered-text"><i class="icon-user"></i></div>
-		<div>
-			<h3 class="centered-text"><%= @user.username %></h3>
+		<div class="centered-text">
+			<h3><%= @user.username %></h3>
+			<p>Ciudad de México</p>
 		</div>
 		<div class="well menu">
 			<ul class="nav nav-list">
-	    	<li class="nav-header">Tú</li>
 	    	<li class="<%= on_path?(user_profile_path(@user.username)) %>">
-					<%= link_to (user_signed_in? ? 'Tu actividad' : 'Actividad reciente'), user_profile_path(@user.username) %>
+					<%= link_to (user_signed_in? ? 'Tu actividad' : 'Actividad'), user_profile_path(@user.username) %>
 				</li>
 	    	<li class="<%= on_path?(user_bikes_path(@user.username)) %>">
 					<%= link_to (user_signed_in? ? 'Tus bicis' : 'Bicis'), user_bikes_path(@user.username) %>
@@ -33,12 +34,12 @@
 					<li><a href="#">Cerca de ti</a></li>
 		    	<li><a href="#">Mensajes</a></li>
 		    	<li><a href="#">Boletín Semanal</a></li>
-	    		<li class="nav-header">Tu Wikicleta</li>
+	    		<li class="nav-header">Configuración</li>
 					<li class="<%= on_path?(settings_profile_path) %>"><%= link_to 'Perfil', settings_profile_path %></li>
 					<li class="<%= on_path?(settings_access_path) %>"><%= link_to 'Acceso', settings_access_path %></li>
 				<% end %>
 	    </ul>
-		</div>
+		</div>		
 	</div>
 	<div class="span8"><%= yield %></div>
 	<div class="span1"></div>
