--- a/app/assets/stylesheets/maps.css.scss
+++ b/app/assets/stylesheets/maps.css.scss
@@ -12,8 +12,8 @@
 .actions {
 	
 	.idea {
-		margin-top: 25px;
-		margin-bottom: 40px;
+		margin-top: 5px;
+		margin-bottom: 20px;
 	}
 	
 	h2, h4 {
@@ -83,7 +83,12 @@
 
 .map-dimensions {
 	width: 100% !important;
-	height: 500px !important;
+	height: 200px !important;
+	margin-top: 30px;
+}
+
+.map-big {
+	height: 400px !important;
 }
 
 .section-actions {
