--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -28,5 +28,90 @@
 	h3 {
 		color: #F15000 !important;
 	}
+	
+	.activities {
+		margin-top: 20px !important;
+		background-color: white;
+		padding: 10px;
+		color: #A7C3F9;
+		-moz-box-shadow: 0 0 1px #A5A5A5;
+		-webkit-box-shadow: 0 0 1px #A5A5A5;
+		box-shadow: 0 0 1px #A5A5A5;
+		
+		li:hover, .active {
+			a {
+				opacity: 1 !important;
+				color: #FF4B02;
+			}
+		}
+		
+		ul {
+			display: inline-block;
+		}
+		
+		ul li, ul li div {
+			display: inline-block;
+			list-style: none;
+		}
+		
+		ul.stats {
+			background-color: #E9F2FF;
+			vertical-align: 40%;
+			margin-right: 30px;
+			padding-left: 10px;
+			padding-right: 10px;
+			li {
+				padding: 15px 10px 7px 10px;
+				a p {
+					padding: 0px;
+					margin: 0px;
+				}
+				
+				a:hover {
+					text-decoration: none;
+				}
+			
+				.number {
+					font-size: 25px;
+					color: #FF6800;
+				}
+			
+				.details {
+					text-transform: uppercase;
+					color: #003AFF;
+					font-size: 11px;
+				}
+			}
+		}
+		
+		ul.actions li {
+			width: 100px;
+		}
+		
+		ul li a:hover {
+			color: #FF6400;
+		}
+		
+		ul.actions li a {
+			opacity: 0.5;
+			text-decoration: none;
+			
+			.title {
+				font-size: 11px;
+				text-transform: uppercase;
+				display: block;
+			}
+			
+			.description {
+				font-size: 10px;
+			}
+		}
+	}
+	
+	.sections {
+		.incidents {
+			
+		}
+	}
 }
 
