--- a/app/views/layouts/neighbourhoods.html.erb
+++ b/app/views/layouts/neighbourhoods.html.erb
@@ -5,8 +5,8 @@
 	
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
-  <%= stylesheet_link_tag    "trips" %>
-  <%= javascript_include_tag "trips" %>
+  <%= stylesheet_link_tag    "neighbourhoods" %>
+  <%= javascript_include_tag "neighbourhoods" %>
 	<%= yield :javascripts %>
   <%= csrf_meta_tags %>
 </head>
