--- a/app/views/neighbourhoods/index.html.erb
+++ b/app/views/neighbourhoods/index.html.erb
@@ -1,29 +1,35 @@
-<div class="row-fluid top-spaced">
-	<div class="span12">
-		<div class="pull-right">
-			<div class="dropdown">
-	    	<%= link_to '<i class="icon-chevron-down"></i> Ciudad de México'.html_safe, '#', 
-						:class => 'btn btn-inverse', "data-toggle"=>"dropdown" %>
-	    	<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-					<li><a tabindex="-1" href="#">Monterrey</a></li>
-					<li><a tabindex="-1" href="#">Guadalajara</a></li>
-					<li><a tabindex="-1" href="#">Aguascalientes</a></li>
-					<li class="divider"></li>
-					<li><a tabindex="-1" href="#">Seleccionar del mapa</a></li>
-	    	</ul>
-	    </div>
-		</div>
-	</div>
-</div>
 <div class="top-spaced"></div>
-<h3 class="centered-text">Recorridos populares</h3>
+<h3 class="centered-text">En bici por la ciudad</h3>
 <div class="separator"></div>
 
-<div class="row-fluid trips centered-text">
+<div class="row-fluid">	
+	<div class="pull-right">
+		<ul class="nav nav-pills">
+			<li class="active"><a href="#">D.F.</a></li>
+	  	<li class="dropdown">
+	  		<a class="dropdown-toggle"
+	  		data-toggle="dropdown"
+	  		href="#">
+	  Otras ciudades
+	  <b class="caret"></b>
+	  </a>
+	  <ul class="dropdown-menu">
+			<li><a href="#">Guadalajara</a></li>
+			<li><a href="#">Monterrey</a></li>
+			<li><a tabindex="-1" href="#">Aguascalientes</a></li>
+			<li class="divider"></li>
+			<li><a tabindex="-1" href="#">Seleccionar del mapa</a></li>
+	  </ul>
+	  </li>
+	  </ul>
+	</div>
+</div>
+
+<div class="row-fluid neighbourhoods centered-text top-spaced">
 	<div class="content span12">
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/zocalo_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/zocalo_front.jpg') %>
 				<div class="details">
 					<p class="title">Tlalpan</p>
 				</div>
@@ -39,7 +45,7 @@
 		</div>
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/tacubaya_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/tacubaya_front.jpg') %>
 				<div class="details">
 					<p class="title">Tacubaya</p>
 				</div>
@@ -55,7 +61,7 @@
 		</div>
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/condesa_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/condesa_front.jpg') %>
 				<div class="details">
 					<p class="title">Colonia Roma</p>
 				</div>
@@ -71,7 +77,7 @@
 		</div>
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/paseos_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/paseos_front.jpg') %>
 				<div class="details">
 					<p class="title">Paseo de los patos</p>
 				</div>
@@ -87,7 +93,7 @@
 		</div>
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/downtown_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/downtown_front.jpg') %>
 				<div class="details">
 					<p class="title">Centro Histórico</p>
 				</div>
@@ -103,7 +109,7 @@
 		</div>
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/coyoacan_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/coyoacan_front.jpg') %>
 				<div class="details">
 					<p class="title">Coyoacán</p>
 				</div>
@@ -121,7 +127,7 @@
 </div>
 
 <div class="top-spaced"></div>
-<h3 class="centered-text">Rodadas</h3>
+<h3 class="centered-text">Rodadas y Eventos ciclistas</h3>
 <div class="separator"></div>
 <div class="row-fluid">
 	<div class="pull-right">
@@ -136,7 +142,7 @@
 	<div class="content centered span12">
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/cicloton_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/cicloton_front.jpg') %>
 				<div class="details">
 					<p class="title">Ciclotón</p>
 					<p class="dates"><i class="icon icon-map-marker"></i> Cada domingo 7 AM a 2 PM</p>
@@ -154,7 +160,7 @@
 		
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/dinamos_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/dinamos_front.jpg') %>
 				<div class="details">
 					<p class="title">BiciOsos</p>
 					<p class="dates"><i class="icon icon-map-marker"></i> Los fines de semana <a href="">@biciosos</a></p>
@@ -172,7 +178,7 @@
 		
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/trips/divisiondelsur_front.jpg') %>
+				<%= image_tag('/assets/neighbourhoods/divisiondelsur_front.jpg') %>
 				<div class="details">
 					<p class="title">División del Sur</p>
 					<p class="dates"><i class="icon icon-map-marker"></i> Cada lunes 7:30 PM <a href="">@divisiondelsur</a></p>
