--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,8 +1,66 @@
 <div class"row-fluid">
-	<div class="span6"></div>
-	<div class="span6">
-		<div class="pull-right">
-			
+	<div class="span12">
+		<div class="activities rounded-10">
+			<% if 1==0 %>
+			<ul class="stats rounded-5">
+				<li>
+					<a href=""  original-title="Puntos acumulados por badges ganados">
+						<p class="number">50</p>
+						<p class="details">Puntos</p>
+					</a>
+				</li>
+				<li>
+					<a href="" original-title="Kilómetros recorridos en rutas o bicibuses">
+						<p class="number">10</p>
+						<p class="details">Kilómetros</p>
+					</a>
+				</li>
+				<li>
+					<a href=""  original-title="Tiempo total que has rodado">
+						<p class="number">120</p>
+						<p class="details">Horas</p>
+					</a>
+				</li>
+			</ul>
+			<% end %>
+			<ul class="actions">
+				<li class="centered-text">
+					<a href="" original-title="Traza, comparte, rankea y mide tu rendimiento">
+						<%= image_tag('/assets/routes_icon.png', :size => '45x45') %>
+						<span class="title">Rutas</span>
+					</a>
+				</li>
+				<li class="centered-text">
+					<a href="" original-title="Marca lugares bici-amigables">
+						<%= image_tag('/assets/places_icon.png', :size => '45x45') %>
+						<span class="title">Lugares</span>
+					</a>
+				</li>
+				<li id="incidents-section" class="centered-text">
+					<a href="<%= hash_link_for(user_profile_path(@user.username), '/incidents') %>" 
+						 original-title="Reporta una bici robada, accidente, avería o asalto">
+						<%= image_tag('/assets/help_icon.png', :size => '45x45') %>
+						<span class="title">Ayuda</span>
+					</a>
+				</li>
+				<li class="centered-text">
+					<a href="" original-title="Haz check-in en rutas, rueda con amigos">
+						<%= image_tag('/assets/bicibus_icon.png', :size => '45x45') %>
+						<span class="title">Bicibus</span>
+					</a>
+				</li>
+				<li class="centered-text">
+					<a href="" original-title="Deja sugerencias para rodar mejor">
+						<%= image_tag('/assets/highlights_icon.png', :size => '45x45') %>
+						<span class="title">Tips</span>
+					</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
+
+<div class="content-fluid">
+	<%= render 'profiles/sections/incidents' %>
+</div>
+
