--- a/app/views/maps/incidents/_incident.html.erb
+++ b/app/views/maps/incidents/_incident.html.erb
@@ -47,7 +47,7 @@
 			<ul class="pull-left contextual-actions inlined-list">
 				<% if current_user && current_user.owns?(incident) %>
 					<li><i class="icon icon-remove"></i> <%= link_to 'Eliminar', 'javascript:void(0);', "data-id" => incident.id, :class => "delete-incident" %></li>
-					<li><i class="icon icon-edit"></i> <%= link_to 'Modificar', edit_maps_layers_incident_path(incident) %></li>
+					<li><i class="icon icon-edit"></i> <%= link_to 'Modificar', edit_maps_incident_path(incident) %></li>
 				<% end %>
 			</ul>
 			<ul class="pull-right contextual-info inlined-list">
