--- a/app/views/layouts/maps/_submenu.html.erb
+++ b/app/views/layouts/maps/_submenu.html.erb
@@ -10,7 +10,7 @@
 		<ul class="inlined-list">
 			<li><span class="routes"></span><%= link_to 'Rutas y Bicibuses', '#' %></li>
 			<!-- Ciclovias | Bicibuses -->
-			<li><span class="bike-reports"></span><%= link_to 'Incidentes', maps_layers_incidents_path %></li>
+			<li><span class="bike-reports"></span><%= link_to 'Incidentes', maps_incidents_path %></li>
 			<li><span class="cyclepaths"></span><%= link_to 'Ciclovias y Bicis Públicas', '#' %></li>
 			<li><span class="highlights"></span><%= link_to 'Tips', '#' %></li>
 			<!-- Puntos de riesgo: Baches, Coladeras, Pavimento, Calles | Que ver -->
