--- a/app/views/profiles/sections/_incidents.html.erb
+++ b/app/views/profiles/sections/_incidents.html.erb
@@ -8,7 +8,7 @@
 				</div>
 			</div>
 			<div class="span2 top-spaced">
-				<%= render 'maps/layers/incidents/report_button' %>
+				<%= render 'maps/incidents/report_button' %>
 			</div>
 		</div>
 		<br/>
@@ -28,7 +28,7 @@
 					t('user_profiles.views.incidents.subsection.title.logged_out'),  
 					t('user_profiles.views.incidents.subsection.title.logged_in')) %>
 				<div id="map" class="show-only edit map-dimensions shadow-light rounded-5"></div>
-				<%= render :partial => 'maps/layers/incidents/incident', :collection => @user.incidents %>
+				<%= render :partial => 'maps/incidents/incident', :collection => @user.incidents %>
 			</div>
 		<% end %>
 	</div>
