Implemented adding of workshops/bike stores

--- a/app/views/profiles/incidents/_incident.html.erb
+++ b/app/views/profiles/incidents/_incident.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= incident.id %>" class="<%= 'first' if(incident_counter == 0) %> centered rounded-5 incident item-on-list <%=incident.symbol_kind%>" data-kind="<%= incident.symbol_kind %>" data-lat="<%= incident.lat %>" data-lon="<%= incident.lon %>">
+<div id="incident-<%= incident.id %>" class="<%= 'first' if(incident_counter == 0) %> centered rounded-5 incident item-on-list <%=incident.symbol_kind%>" data-kind="<%= incident.symbol_kind %>" data-lat="<%= incident.lat %>" data-lon="<%= incident.lon %>">
 	<div class="row-fluid">
 		<div class="row-fluid">
 			<div class="span1"><div class="signal"></div></div>
