--- a/app/views/profiles/tips/_index.html.erb
+++ b/app/views/profiles/tips/_index.html.erb
@@ -1,4 +1,4 @@
-<div id="incidents" class="span12 section incidents">
+<div id="tips" class="span12 section tips">
 	<% if current_user_equals(user) %>
 		<div class="row-fluid">
 			<div class="span10 actions">
