--- a/app/views/profiles/tips/_tip.html.erb
+++ b/app/views/profiles/tips/_tip.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= tip.id %>" class="<%= 'first' if(tip_counter == 0) %> centered tip item-on-list rounded-5 <%= tip.category_symbol %>" data-kind="<%= tip.category_symbol %>" data-lat="<%= tip.lat %>" data-lon="<%= tip.lon %>">
+<div id="tip-<%= tip.id %>" class="<%= 'first' if(tip_counter == 0) %> centered tip item-on-list rounded-5 <%= tip.category_symbol %>" data-kind="<%= tip.category_symbol %>" data-lat="<%= tip.lat %>" data-lon="<%= tip.lon %>">
 	<div class="content-fluid">
 		<div class="row-fluid">
 			<div class="span1"><div class="signal"></div></div>
