--- a/app/views/profiles/workshops/_form.html.erb
+++ b/app/views/profiles/workshops/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well altering-workshop">
 	<div class="control-group">
 		<div id="coordinates_lat_both" class="alert alert-error error">
 			<%= t('places.workshops.views.form.validations.coordinates') %>
@@ -20,7 +20,7 @@
 	
 	<div class="control-group">
 		<div id="workshop_details_min" class="alert alert-error error">
-			<%= t('places.workshops.views.form.validations.content') %>
+			<%= t('places.workshops.views.form.validations.details') %>
 		</div>
 		<%= f.label :details, t('places.workshops.views.form.details'), :class => 'control-label' %>
 		<div class="controls">
@@ -51,13 +51,13 @@
 			<div class="control-group">
 				<%= f.label :phone, t('places.workshops.views.form.phone'), :class => 'control-label' %>
 				<div class="controls">
-					<%= f.text_field :phone %>
+					<%= f.text_field :phone, :class => 'input-small' %>
 				</div>
 			</div>
 			<div class="control-group">
 				<%= f.label :cell_phone, t('places.workshops.views.form.cell_phone'), :class => 'control-label' %>
 				<div class="controls">
-					<%= f.text_field :cell_phone %>
+					<%= f.text_field :cell_phone, :class => 'input-small' %>
 				</div>
 			</div>
 		</div>
@@ -65,13 +65,14 @@
 			<div class="control-group">
 				<%= f.label :webpage, t('places.workshops.views.form.webpage'), :class => 'control-label' %>
 				<div class="controls">
-					<%= f.text_field :webpage %>
+					<%= f.text_field :webpage, :class => 'input-small' %>
 				</div>
 			</div>
 			<div class="control-group">
-				<%= f.label :twitter, t('places.workshops.views.form.twitter'), :class => 'control-label' %>
-				<div class="controls">
-					<%= f.text_field :twitter %>
+				<%= f.label ' '%>
+				<div class="input-prepend pull-right">
+					<span class="add-on">@</span>
+					<%= f.text_field :twitter, :class => 'input-medium', :placeholder => t('places.workshops.views.form.twitter') %>
 				</div>
 			</div>
 		</div>
