--- a/app/views/neighbourhoods/index.html.erb
+++ b/app/views/neighbourhoods/index.html.erb
@@ -29,22 +29,6 @@
 	<div class="content span12">
 		<div class="box rounded-5">
 			<div class="core">
-				<%= image_tag('/assets/neighbourhoods/zocalo_front.jpg') %>
-				<div class="details">
-					<p class="title">Tlalpan</p>
-				</div>
-			</div>
-			<div class="stats centered centered-text row-fluid">
-				<div class="span6 centered">
-					<a href=""><i class="trips-bicycle"></i><span class="number">15</span><span class="text">disponibles</span></a>
-				</div>
-				<div class="span6 centered">
-					<a href=""><i class="trips-people"></i><span class="number">30</span><span class="text">rodando</span></a>
-				</div>
-			</div>
-		</div>
-		<div class="box rounded-5">
-			<div class="core">
 				<%= image_tag('/assets/neighbourhoods/tacubaya_front.jpg') %>
 				<div class="details">
 					<p class="title">Tacubaya</p>
@@ -63,7 +47,7 @@
 			<div class="core">
 				<%= image_tag('/assets/neighbourhoods/condesa_front.jpg') %>
 				<div class="details">
-					<p class="title">Colonia Roma</p>
+					<p class="title">Colonia Condesa</p>
 				</div>
 			</div>
 			<div class="stats centered centered-text row-fluid">
@@ -72,54 +56,6 @@
 				</div>
 				<div class="span6 centered">
 					<a href=""><i class="trips-people"></i><span class="number">30</span><span class="text">rodando</span></a>
-				</div>
-			</div>
-		</div>
-		<div class="box rounded-5">
-			<div class="core">
-				<%= image_tag('/assets/neighbourhoods/paseos_front.jpg') %>
-				<div class="details">
-					<p class="title">Paseo de los patos</p>
-				</div>
-			</div>
-			<div class="stats centered centered-text row-fluid">
-				<div class="span6 centered">
-					<a href=""><i class="trips-bicycle"></i><span class="number">5</span><span class="text">disponibles</span></a>
-				</div>
-				<div class="span6 centered">
-					<a href=""><i class="trips-people"></i><span class="number">30</span><span class="text">rodando</span></a>
-				</div>
-			</div>
-		</div>
-		<div class="box rounded-5">
-			<div class="core">
-				<%= image_tag('/assets/neighbourhoods/downtown_front.jpg') %>
-				<div class="details">
-					<p class="title">Centro Histórico</p>
-				</div>
-			</div>
-			<div class="stats centered centered-text row-fluid">
-				<div class="span6 centered">
-					<a href=""><i class="trips-bicycle"></i><span class="number">50</span><span class="text">disponibles</span></a>
-				</div>
-				<div class="span6 centered">
-					<a href=""><i class="trips-people"></i><span class="number">100</span><span class="text">rodando</span></a>
-				</div>
-			</div>
-		</div>
-		<div class="box rounded-5">
-			<div class="core">
-				<%= image_tag('/assets/neighbourhoods/coyoacan_front.jpg') %>
-				<div class="details">
-					<p class="title">Coyoacán</p>
-				</div>
-			</div>
-			<div class="stats centered centered-text row-fluid">
-				<div class="span6 centered">
-					<a href=""><i class="trips-bicycle"></i><span class="number">21</span><span class="text">disponibles</span></a>
-				</div>
-				<div class="span6 centered">
-					<a href=""><i class="trips-people"></i><span class="number">75</span><span class="text">rodando</span></a>
 				</div>
 			</div>
 		</div>
