--- a/app/views/profiles/places/_index.html.erb
+++ b/app/views/profiles/places/_index.html.erb
@@ -1,4 +1,4 @@
-<div id="incidents" class="span12 section incidents">
+<div id="places" class="span12 section incidents">
 	<% if current_user_equals(user) %>
 		<div class="row-fluid">
 			<div class="span10 actions">
@@ -21,21 +21,18 @@
 	<% end %>
 	
 	<div class="row-fluid">
-		<div class="listing-view">		
+		<div class="listing-view">	
+			<%= render 'profiles/places/sub_bar' %>
+				
 			<% if places.empty? %>
-				<%= subsection_with(
-					t('user_profiles.views.tips.subsection.title.logged_out'),  
-					t('user_profiles.views.tips.subsection.title.logged_in')) %>
-				<br/>
 				<div class="centered-text well">
 					<p>No has compartido ni seguido algún lugar aún</p>
 				</div>
 			<% else %>
-					<%= subsection_with(
-						t('user_profiles.views.tips.subsection.title.logged_out'),  
-						t('user_profiles.views.tips.subsection.title.logged_in')) %>
 					<div id="map" class="show-only edit map-dimensions shadow-light rounded-5"></div>
-					<%= render :partial => 'profiles/places/place', :collection => tips, :locals => {:show_actions => true} %>
+					<div class="workshop-list">
+						<%= render :partial => 'profiles/workshops/workshop', :collection => places[:workshops] %>
+					</div>
 			<% end %>
 		</div>
 	</div>
