Refactoring of js profiles subsection code

--- a/app/views/profiles/tips/_form.html.erb
+++ b/app/views/profiles/tips/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well altering-tip">
 	<div class="control-group">
 		<div id="coordinates_lat_both" class="alert alert-error error">
 			<%= t('tips.views.form.validations.coordinates') %>
